Update requirements via linter issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.5.2
+autopep8==1.6.0
 Django==3.2.14
+pycodestyle==2.8.0
 pytz==2022.1
 sqlparse==0.4.2
+toml==0.10.2
 typing_extensions==4.3.0
